# iroh-godot

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh
addons/: release
addons/iroh-godot/: iroh-godot.gdextension
addons/iroh_godot/: iroh_godot.gdextension
examples/iroh-godot-example/: README.md  icon.svg.import  project.godot
examples/iroh-godot-example/scenes/: multiplayer_scene_ui.scn  player.tscn  player_field.tscn  root.tscn
examples/iroh-godot-example/scripts/: iroh_multiplayer_spawner.gd  iroh_multiplayer_spawner.gd.uid  iroh_player_controller.gd  iroh_player_controller.gd.uid  multiplayer_scene_ui.gd  multiplayer_scene_ui.gd.uid  network_manager.gd  network_manager.gd.uid  root.gd  root.gd.uid
flatbuffers/: godot_peer_data.fbs
src/: godot_peer_data_generated.rs  internal_protocol.rs  iroh_godot_protocol.rs  lib.rs  shared.rs
src/multiplayer_peer/: extension.rs  mod.rs  peer.rs
src/protocol/: behaviour.rs  connections.rs  mod.rs
