[package]
name = "iroh-godot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
data-encoding = "2.9.0"
env_logger = "0.11.8"
fastrand = "2.3.0"
flatbuffers = "25.2.10"
godot = { version = "0.3.4", features = ["register-docs"] }
godot_tokio = "0.3.1"
iroh = "0.91.1"
log = "0.4.27"
n0-future = "0.2.0"
tokio = { version = "1.47.1", default-features = false, features = ["sync"] }

[build-dependencies]
flatc-rust = "0.2.0"
